Added Java 17 and JMPA Jigsaw compatiblity after merge with main.